WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164831
Fix exception scope checking in JSGlobalObject.cpp.
https://bugs.webkit.org/show_bug.cgi?id=164831
Summary
Fix exception scope checking in JSGlobalObject.cpp.
Mark Lam
Reported
2016-11-16 12:53:03 PST
Patch coming.
Attachments
proposed patch.
(5.25 KB, patch)
2016-11-16 12:57 PST
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-11-16 12:57:41 PST
Created
attachment 294965
[details]
proposed patch.
Mark Lam
Comment 2
2016-11-16 13:06:20 PST
Thanks for the review. Landed in
r208808
: <
http://trac.webkit.org/r208808
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug