Fix exception scope checking in JSGlobalObject.cpp. https://bugs.webkit.org/show_bug.cgi?id=164831

Reviewed by Saam Barati.

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):
- Use a CatchScope here because we don't ever expect JSGlobalObject initialization
  to fail with errors.
(JSC::JSGlobalObject::put):
- Fix exception check requirements.



Canonical link: https://commits.webkit.org/182520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208808 268f45cc-cd09-0410-ab3c-d52691b4dbfc